# ssc-viewer

./: README.md  pyproject.toml
ansible/: ansible.cfg  git-config.yml  gui.yaml  host.ini  playbook-install-ssc-viewer.yml
src/mqqt/: client.py
src/ssc_viewer/: settings.py  start.py
src/ssc_viewer/email/: mail.py
src/ssc_viewer/interfaces/: observer.py
src/ssc_viewer/mqqt/: client.py  mqtt_client.py
src/ssc_viewer/rest/: restclient.py
src/ssc_viewer/stomp_ws/: client.py  frame.py
src/ssc_viewer/stylesheet/: interface_styles.py
