[project]
name = "ssc-viewer"
version = "0.1.0"
description = "Resevation Info"
authors = [
    {name = "jackarian",email = "ariannagiacomo@gmail.com"}
]
readme = "README.md"
requires-python = "=3.11.2"
dependencies = [
    "pyside6 (==6.8.0.2)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pyyml (>=0.0.2,<0.0.3)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "stomp-py (>=8.2.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
